# advent-of-code

./: .gitignore  CMakeLists.txt  README.md  advent-of-code.code-workspace
2023/: CMakeLists.txt
2023/problems/: CMakeLists.txt
2023/problems/day-1/: partOne.cpp  partTwo.cpp
2023/problems/day-2/: partOne.cpp  partTwo.cpp
2023/problems/day-3/: partOne.cpp
2023/problems/day-4/: partOne.cpp  partTwo.cpp
2023/problems/day-6/: partOne.cpp  partTwo.cpp
2024/: CMakeLists.txt
2024/problems/: CMakeLists.txt
2024/problems/day-1/: partOne.cpp  partTwo.cpp
2024/problems/day-2/: partOne.cpp  partTwo.cpp
2024/problems/day-3/: partOne.cpp
2024/problems/day-4/: partOne.cpp
2024/problems/day-5/: partOne.cpp
problems/day-1/: main.cpp  partTwo.cpp
problems/day-2/: partOne.cpp
problems/day-3/: partOne.cpp
problems/day-4/: partOne.cpp  partTwo.cpp
problems/day-6/: partOne.cpp
